tests/cases/patterns/ok/pattern-value-ownership-vector-rest-alias.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var total = 0;
  {
    let [first, rest @ ..]: Vec[own i64] = [make_owned(1), make_owned(2), make_owned(3)];
    total = len(rest);
    drop first;
  }
  return total;
}
